[gd_scene load_steps=3 format=3 uid="uid://bybn6lqxrp42"]

[ext_resource type="Script" path="res://levels/Scenes/start_game_screen.gd" id="1_ghi3h"]
[ext_resource type="Texture2D" uid="uid://dnk3dv6ph0fa" path="res://assets/StartScreenAssets/StartScreenBackground.png" id="1_skb8n"]

[node name="StartGameScreen" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ghi3h")

[node name="backgroundImage" type="TextureRect" parent="."]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_skb8n")

[node name="Camera2D" type="Camera2D" parent="backgroundImage"]
position = Vector2(576, 324)

[node name="GridContainer" type="GridContainer" parent="backgroundImage"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -322.0
offset_right = 141.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4

[node name="NewGameButton" type="Button" parent="backgroundImage/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "New Game"

[node name="LoadGame" type="Button" parent="backgroundImage/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Load Game"

[node name="QuitButton" type="Button" parent="backgroundImage/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Quit Game"

[connection signal="pressed" from="backgroundImage/GridContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="backgroundImage/GridContainer/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="backgroundImage/GridContainer/QuitButton" to="." method="_on_quit_button_pressed"]
